# cxx20_samples

./: CMakeLists.txt  Dockerfile.cxx20_samples  README.md  build_and_run_using_docker.sh  run_using_docker.sh
.github/workflows/: build.yml
src/: CMakeLists.txt
src/3-ways-comparison/: CMakeLists.txt
src/constexpr_virtual/: CMakeLists.txt  main.cpp
src/designated_initializer/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/simple_module/: CMakeLists.txt  main.cpp  shape.cppm  shape.cxx
src/modules/test_func/: CMakeLists.txt
src/others/: CMakeLists.txt
src/others/compare/: main.cpp
src/others/consteval/: CMakeLists.txt
src/others/specifier/: CMakeLists.txt
src/others/specifier/consteval/: main.cpp
src/others/specifier/constinit/: CMakeLists.txt  main.cpp
src/others/specifier/explicit_bool/: CMakeLists.txt  main.cpp
src/ranges/: CMakeLists.txt  main.cpp
src/span/: CMakeLists.txt  main.cpp
